--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: HA141User # the main title
+title: Muhammad Hairi # the main title
 
-tagline: Berusaha vibe coding # it will display as the subtitle
+tagline: Mahasiswa Universitas Hasanuddin # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media-cgk1-2.cdn.whatsapp.net/v/t61.24694-24/397244752_1050499619423950_4673175937259029988_n.jpg?ccb=11-4&oh=01_Q5Aa1wGIF4Nteq3aBjTEkO6LyNMbvidkRr0SODsbdCguEFl2ng&oe=68557E59&_nc_sid=5e03e0&_nc_cat=111
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
